# database-orm-rust

./: Cargo.toml  test.db
migrations/2019-04-29-224647_create_initial_tables/: up.sql
src/: main.rs  models.rs
