[package]
name = "database-orm-rust"
version = "0.1.0"
authors = ["hazzard <thehazzard@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
failure = "0.1"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.5", features = ["serde", "v4"] }